--- a/build.xml
+++ b/build.xml
@@ -1,18 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project default="create_run_jar" name="Create Runnable Jar for Project easyccg">
-    <!--this file was created by Eclipse Runnable JAR Export Wizard-->
-    <!--ANT 1.7 is required                                        -->
-    <target name="create_run_jar">
-        <jar destfile="/afs/inf.ed.ac.uk/user/s10/s1049478/workspace/easyccg/easyccg.jar" filesetmanifest="mergewithoutmain">
+<project name="easyccg" basedir="." default="main">
+
+    <property name="src.dir"     value="src"/>
+    <property name="build.dir"   value="build"/>
+    <property name="classes.dir" value="${build.dir}/classes"/>
+    <property name="jar.dir"     value="${build.dir}/jar"/>
+    <property name="lib.dir"     value="lib"/>
+    <property name="main-class"  value="uk.ac.ed.easyccg.main.EasyCCG"/>
+
+    <path id="classpath">
+        <fileset dir="${lib.dir}" includes="**/*.jar"/>
+    </path>
+
+    <target name="clean">
+        <delete dir="${build.dir}"/>
+    </target>
+
+    <target name="compile">
+        <mkdir dir="${classes.dir}"/>
+        <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" includeantruntime="false"/>
+    </target>
+
+    <target name="jar" depends="compile">
+        <mkdir dir="${jar.dir}"/>
+        <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}" filesetmanifest="mergewithoutmain">
+            <zipgroupfileset dir="${lib.dir}" includes="**/*.jar"/>
             <manifest>
-                <attribute name="Main-Class" value="uk.ac.ed.easyccg.main.EasyCCG"/>
-                <attribute name="Class-Path" value="."/>
+                <attribute name="Main-Class" value="${main-class}"/>
             </manifest>
-            <fileset dir="/afs/inf.ed.ac.uk/user/s10/s1049478/workspace/easyccg/bin"/>
-            <zipfileset excludes="META-INF/*.SF" src="/afs/inf.ed.ac.uk/user/s10/s1049478/workspace/easyccg/lib/guava-15.0.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="/afs/inf.ed.ac.uk/user/s10/s1049478/workspace/easyccg/lib/mtj-1.0-snapshot.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="/afs/inf.ed.ac.uk/user/s10/s1049478/workspace/easyccg/lib/jewelcli-0.7.6.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="/afs/inf.ed.ac.uk/user/s10/s1049478/workspace/easyccg/lib/edu.mit.jwi_2.3.0.jar"/>
         </jar>
     </target>
+
+    <target name="main" depends="clean,jar"/>
+
 </project>
